--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
   <!-- ENCABEZADO -->
   <header>
-    <img src="/mnt/data/Portada_Facebook.png" alt="Logo Aceros Ugartesa S.A.">
+    <img src="https://github.com/halshs-droid/aceros-ugartesa/blob/main/Logito.png?raw=true" alt="Logo Aceros Ugartesa S.A.">
     <nav>
       <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
       <ul>
