--- a/index.html
+++ b/index.html
@@ -235,6 +235,38 @@
     .menu-toggle {
       display: none;
     }
+    .hero {
+  background: url('https://github.com/halshs-droid/aceros-ugartesa/blob/main/Portada_Facebook.png?raw=true') no-repeat center center/cover;
+  color: #fff;
+  text-align: left;
+  padding: 140px 40px;
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.5); /* capa oscura para resaltar el texto */
+}
+
+.hero-content {
+  position: relative;
+  max-width: 900px;
+  z-index: 2;
+}
+
+.hero h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  font-weight: 800;
+}
+
+.hero p {
+  font-size: 1.1rem;
+  margin-bottom: 30px;
+}
+    
   </style>
 </head>
 <body>
