--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       text-align: left;
       padding: 140px 40px;
       position: relative;
+      margin-top: 90px; 
     }
 
     .hero::after {
